# valencia

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.MD
cv/: code-virtualizer.cv
extlibs/: CMakeLists.txt
source/: CMakeLists.txt  OffsetsDumper.cpp  OffsetsDumper.h  OffsetsFinder.h  PortableExecutableHeaders.h  Signatures.h  main.cpp
source/gui/: CMakeLists.txt  gui.cpp  gui.h
